test_scores/negative_dimers/features/Q32P41.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q32P41.pkl.xz